cluster/masjid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masjid
  namespace: masjid
  annotations: 
    cert-manager.io/cluster-issuer: production-cluster-issuer
    # app: prometheus 
spec:
  ingressClassName: nginx
  rules:
  - host: masjid.mhasnain.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: masjid
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - masjid.mhasnain.dev
    secretName: masjid-cert
